# GRIM-REAPERS-YIELD-FARM

./: .gitignore  ACHIEVEMENTS.md  API_REFERENCE.md  Anchor.toml  BUILD_STATUS.md  COMPLETION_REPORT.md  DEMO_GUIDE.md  DEPLOYMENT.md  DYNAMIC_APY.md  FINAL_STATUS.md  HACKATHON_READY.md  IMPLEMENTATION_SUMMARY.md  INSTALL.sh  MAINNET_DEPLOYMENT_CHECKLIST.md  MIDNIGHT_HARVEST.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_WITCHING_HOUR.md  RUNNING.md  SETUP_INSTRUCTIONS.md  SIMULATION_SUMMARY.md  START_HERE.md  STATUS.md  WHATS_NEXT.md  WITCHING_HOUR_ASSAULT.md  cron-example.sh  package.json  run-tests.sh  setup-dev-environment.sh  verify-build.sh  windows-task-example.xml
docs/: witching-hour-attack-flow.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
programs/soul-harvest-vault/: Cargo.toml
programs/soul-harvest-vault/src/: constants.rs  errors.rs  lib.rs
programs/soul-harvest-vault/src/instructions/: check_achievements.rs  close_vault.rs  compound.rs  create_vault.rs  init_achievements.rs  initialize.rs  midnight_harvest.rs  mint_reaper_pass.rs  mod.rs  query_leaderboard.rs  withdraw.rs
programs/soul-harvest-vault/src/state/: achievements.rs  config.rs  leaderboard.rs  mod.rs  rate_limiter.rs  vault.rs
scripts/: calculate-apy.js  calculate-apy.ts  check-deployment.js  check-deployment.ts  demo.ts  deploy-mainnet.bat  deploy-mainnet.sh  init-simple.ts  init.mjs  initialize-devnet.ts  initialize-mainnet.ts  install-solana-toolchain.bat  install-solana-toolchain.ps1  midnight-harvest.ts  (+2 more)
(+79 files in other folders)
