[package]
name = "soul-harvest-vault"
version = "0.1.0"
description = "Soul Harvest Vault - A Solana DeFi protocol with gamified rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soul_harvest_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "3.2.3"
